--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>週刊！AIクリエイターズ・スタジオ｜あなたの「苦手」を「創作」に変える場所</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="lp_style.css">
 </head>
 <body>
@@ -20,7 +21,7 @@
 
     <section class="problem">
         <div class="container">
-            <h2>こんな「違和感」を感じていませんか？</h2>
+            <h2><span class="material-icons">help_outline</span>こんな「違和感」を感じていませんか？</h2>
             <div class="problem-grid">
                 <div class="problem-item">「AIは『稼げる』『効率化』のためだけ？」</div>
                 <div class="problem-item">「文章を書くのが遅くて、発信が苦手…」</div>
@@ -33,7 +34,7 @@
 
     <section class="solution">
         <div class="container">
-            <h2>「苦手なまま、始めてもいい場所」<br>それが、AIクリエイターズ・スタジオです。</h2>
+            <h2><span class="material-icons">lightbulb</span>「苦手なまま、始めてもいい場所」<br>それが、AIクリエイターズ・スタジオです。</h2>
             <p>当スタジオは、単なるAIのノウハウ発信ではありません。<br>
             文章を書くのが苦手だった僕が、AIを使ってGPTsツール『ブログAIチーム』を創作し、1年で410部以上お届けした経験。<br>
             その「リアルな実践知」と「試行錯誤のプロセス」を共有することで、<br>
@@ -44,18 +45,18 @@
 
     <section class="features">
         <div class="container">
-            <h2>スタジオの主な発信コンテンツ</h2>
+            <h2><span class="material-icons">list_alt</span>スタジオの主な発信コンテンツ</h2>
             <div class="feature-cards">
                 <div class="card">
-                    <h3>１. AIテクニック/ツール系</h3>
+                    <h3><span class="material-icons">code</span>１. AIテクニック/ツール系</h3>
                     <p>GPTsの作り方（初心者〜上級者）、API連携、僕が人柱になって試した最新AIツールの情報など、すぐに使える実践テクニックを共有します。</p>
                 </div>
                 <div class="card">
-                    <h3>２. マインド/マーケティング系</h3>
+                    <h3><span class="material-icons">psychology</span>２. マインド/マーケティング系</h3>
                     <p>初作品の収益化プロセス、ローンチ後の思考法など。あなたの創作活動を「仕事」にするための考え方や、AI時代のマーケティング術を伝えます。</p>
                 </div>
                 <div class="card">
-                    <h3>３. 裏話系</h3>
+                    <h3><span class="material-icons">auto_stories</span>３. 裏話系</h3>
                     <p>リアルタイムでの企画の裏側や、僕自身がリソース不足でできないけど「今やったら喜ばれる」アイデアなどを限定共有。クリエイターとしてのリアルな視点に触れられます。</p>
                 </div>
             </div>
@@ -64,10 +65,10 @@
 
     <section class="plans">
         <div class="container">
-            <h2>料金プラン</h2>
+            <h2><span class="material-icons">payments</span>料金プラン</h2>
             <div class="plan-cards">
                 <div class="plan-card">
-                    <h3>のぞき見スタジオ</h3>
+                    <h3><span class="material-icons">visibility</span>のぞき見スタジオ</h3>
                     <p class="price">月額 500円</p>
                     <p class="plan-desc">「サクッと読みたい」におすすめ！</p>
                     <ul>
@@ -77,7 +78,7 @@
                     </ul>
                 </div>
                 <div class="plan-card featured">
-                    <h3>みんなのスタジオ</h3>
+                    <h3><span class="material-icons">groups</span>みんなのスタジオ</h3>
                     <p class="price">月額 980円</p>
                     <p class="plan-desc">「モチベを維持したい人」におすすめ！</p>
                     <ul>
@@ -88,7 +89,7 @@
                     </ul>
                 </div>
                 <div class="plan-card">
-                    <h3>ガチ相談</h3>
+                    <h3><span class="material-icons">support_agent</span>ガチ相談</h3>
                     <p class="price">月額 3,980円</p>
                     <p class="plan-desc">「スポット相談したい人」におすすめ！</p>
                     <ul>
@@ -103,7 +104,7 @@
 
     <footer class="final-cta">
         <div class="container">
-            <h2>完璧じゃなくても、うまくできなくても、大丈夫。</h2>
+            <h2><span class="material-icons">sentiment_satisfied_alt</span>完璧じゃなくても、うまくできなくても、大丈夫。</h2>
             <p>AIと一緒なら、何かを「つくる側」になれる。<br>あなたの「やってみたい」を、ここで始めませんか？</p>
             <a href="https://note.com/yakiimo_blog/membership" class="cta-button" target="_blank">AIクリエイターズ・スタジオを覗いてみる</a>
             <div class="social-links">
