Add fade-in animation to LP sections

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
     </header>
 
-    <section class="problem">
+    <section class="problem fade-in-section">
         <div class="container">
             <h2><span class="material-icons">help_outline</span>こんな「違和感」を感じていませんか？</h2>
             <div class="problem-grid">
@@ -32,7 +32,7 @@
         </div>
     </section>
 
-    <section class="solution">
+    <section class="solution fade-in-section">
         <div class="container">
             <h2><span class="material-icons">lightbulb</span>「苦手なまま、始めてもいい場所」<br>それが、AIクリエイターズ・スタジオです。</h2>
             <p>当スタジオは、単なるAIのノウハウ発信ではありません。<br>
@@ -43,7 +43,7 @@
         </div>
     </section>
 
-    <section class="features">
+    <section class="features fade-in-section">
         <div class="container">
             <h2><span class="material-icons">list_alt</span>スタジオの主な発信コンテンツ</h2>
             <div class="feature-cards">
@@ -63,7 +63,7 @@
         </div>
     </section>
 
-    <section class="plans">
+    <section class="plans fade-in-section">
         <div class="container">
             <h2><span class="material-icons">payments</span>料金プラン</h2>
             <div class="plan-cards">
@@ -102,7 +102,7 @@
         </div>
     </section>
 
-    <footer class="final-cta">
+    <footer class="final-cta fade-in-section">
         <div class="container">
             <h2><span class="material-icons">sentiment_satisfied_alt</span>完璧じゃなくても、うまくできなくても、大丈夫。</h2>
             <p>AIと一緒なら、何かを「つくる側」になれる。<br>あなたの「やってみたい」を、ここで始めませんか？</p>
@@ -115,5 +115,6 @@
         </div>
     </footer>
 
+    <script src="lp_script.js"></script>
 </body>
 </html>
