Improve LP copy for better clarity and appeal

--- a/index.html
+++ b/index.html
@@ -11,53 +11,53 @@
 
     <header class="hero">
         <div class="container">
-            <h1>あなたの「苦手」が、<br>「創作」になる。</h1>
-            <p class="subtitle">文章が苦手、話すのが苦手、考えがまとまらない…<br>そんなあなたこそ、AIで「つくる側」に立つ時代が来た。</p>
+            <h1>AIで、あなたの「苦手」を「得意」に変える。</h1>
+            <p class="subtitle">文章作成、発信、アイデア整理…<br>AIが、あなたの創作活動を強力にサポートします。</p>
             <h2>週刊！AIクリエイターズ・スタジオ</h2>
-            <p>AIで「アイデア１つで輝ける世界」を目指す、<br>やきいもがお届けするnoteメンバーシップ</p>
+            <p>「AIで稼ぐ」だけじゃない。<br>「AIで創作する喜び」を、やきいもが毎週お届けするnoteメンバーシップ</p>
             <a href="https://note.com/yakiimo_blog/membership" class="cta-button" target="_blank">今すぐスタジオに参加する</a>
         </div>
     </header>
 
     <section class="problem fade-in-section">
         <div class="container">
-            <h2><span class="material-icons">help_outline</span>こんな「違和感」を感じていませんか？</h2>
+            <h2><span class="material-icons">help_outline</span>AI活用に、こんな「モヤモヤ」ありませんか？</h2>
             <div class="problem-grid">
-                <div class="problem-item">「AIは『稼げる』『効率化』のためだけ？」</div>
-                <div class="problem-item">「文章を書くのが遅くて、発信が苦手…」</div>
-                <div class="problem-item">「考えがまとまらず、伝える自信がない…」</div>
-                <div class="problem-item">「AIは強者がもっと強くなるためのツールなの？」</div>
+                <div class="problem-item">「AIは『稼ぐ』『効率化』ばかりで、自分には関係ない？」</div>
+                <div class="problem-item">「文章や発信が苦手で、AIをどう使えばいいか分からない…」</div>
+                <div class="problem-item">「アイデアはあるけど、形にする自信がない…」</div>
+                <div class="problem-item">「AIは一部の強者だけが使いこなせるツールなの？」</div>
             </div>
-            <p class="center-text">その「苦手」や「違和感」、<br>AIと一緒なら、乗り越えられるかもしれません。</p>
+            <p class="center-text">その「モヤモヤ」や「苦手意識」、<br>AIクリエイターズ・スタジオで解消しませんか？</p>
         </div>
     </section>
 
     <section class="solution fade-in-section">
         <div class="container">
-            <h2><span class="material-icons">lightbulb</span>「苦手なまま、始めてもいい場所」<br>それが、AIクリエイターズ・スタジオです。</h2>
-            <p>当スタジオは、単なるAIのノウハウ発信ではありません。<br>
-            文章を書くのが苦手だった僕が、AIを使ってGPTsツール『ブログAIチーム』を創作し、1年で410部以上お届けした経験。<br>
-            その「リアルな実践知」と「試行錯誤のプロセス」を共有することで、<br>
-            あなたの「やってみたい」という気持ちを後押しします。</p>
-            <p><strong>「弱者が、アイデア１つで輝ける世界」を、一緒につくりましょう。</strong></p>
+            <h2><span class="material-icons">lightbulb</span>「AIで創作する喜び」を、あなたにも。</h2>
+            <p>AIクリエイターズ・スタジオは、単なるAIノウハウの羅列ではありません。<br>
+            「発信が苦手」「文章が苦手」だった僕自身が、AI（GPTs）を活用して『ブログAIチーム』を創作し、<br>
+            ローンチ3日で120部、1年で累計410部以上販売した「リアルな成功体験」と「実践知」を共有します。<br>
+            このスタジオは、あなたの「やってみたい」という純粋な気持ちを、具体的な「できる」に変える場所です。</p>
+            <p><strong>「弱者が、アイデア１つで輝ける世界」を、AIと共に実現しましょう。</strong></p>
         </div>
     </section>
 
     <section class="features fade-in-section">
         <div class="container">
-            <h2><span class="material-icons">list_alt</span>スタジオの主な発信コンテンツ</h2>
+            <h2><span class="material-icons">list_alt</span>スタジオで得られる３つの価値</h2>
             <div class="feature-cards">
                 <div class="card">
-                    <h3><span class="material-icons">code</span>１. AIテクニック/ツール系</h3>
-                    <p>GPTsの作り方（初心者〜上級者）、API連携、僕が人柱になって試した最新AIツールの情報など、すぐに使える実践テクニックを共有します。</p>
+                    <h3><span class="material-icons">code</span>１. 最先端AIツールの実践テクニック</h3>
+                    <p>GPTsの始め方から応用（API連携など）、僕が実際に試して厳選した最新AIツールの活用法まで、あなたの創作活動に直結する実践的なAIテクニックを毎週お届けします。</p>
                 </div>
                 <div class="card">
-                    <h3><span class="material-icons">psychology</span>２. マインド/マーケティング系</h3>
-                    <p>初作品の収益化プロセス、ローンチ後の思考法など。あなたの創作活動を「仕事」にするための考え方や、AI時代のマーケティング術を伝えます。</p>
+                    <h3><span class="material-icons">psychology</span>２. 創作を仕事にするマインド＆マーケティング</h3>
+                    <p>AI作品の収益化プロセス、ローンチ後の戦略、そして「創作活動を仕事にする」ための思考法を深掘り。AI時代のクリエイターとして自立するためのノウハウが満載です。</p>
                 </div>
                 <div class="card">
-                    <h3><span class="material-icons">auto_stories</span>３. 裏話系</h3>
-                    <p>リアルタイムでの企画の裏側や、僕自身がリソース不足でできないけど「今やったら喜ばれる」アイデアなどを限定共有。クリエイターとしてのリアルな視点に触れられます。</p>
+                    <h3><span class="material-icons">auto_stories</span>３. リアルな成功と失敗の「裏話」</h3>
+                    <p>僕自身のAI作品制作の裏側、企画の進捗、そして「今やったら喜ばれる」けどリソース不足でできないアイデアまで、ここでしか聞けないリアルな情報とインサイトを共有します。</p>
                 </div>
             </div>
         </div>
@@ -70,32 +70,33 @@
                 <div class="plan-card">
                     <h3><span class="material-icons">visibility</span>のぞき見スタジオ</h3>
                     <p class="price">月額 500円</p>
-                    <p class="plan-desc">「サクッと読みたい」におすすめ！</p>
+                    <p class="plan-desc">「AIの最新情報をサクッと知りたい」あなたに！</p>
                     <ul>
-                        <li>毎週1〜2本の記事更新</li>
-                        <li>全記事読み放題</li>
+                        <li>毎週1〜2本の限定記事更新</li>
+                        <li>過去の全記事読み放題</li>
                         <li>AI最新トレンド（不定期更新）</li>
                     </ul>
                 </div>
                 <div class="plan-card featured">
                     <h3><span class="material-icons">groups</span>みんなのスタジオ</h3>
                     <p class="price">月額 980円</p>
-                    <p class="plan-desc">「モチベを維持したい人」におすすめ！</p>
+                    <p class="plan-desc">「AIコンテンツ制作でモチベーションを維持したい」あなたに！</p>
                     <ul>
                         <li>のぞき見スタジオの全内容</li>
-                        <li><strong>Discordコミュニティ招待</strong></li>
-                        <li><strong>テキスト相談</strong></li>
-                        <li>月1回 グループオンライン活動会</li>
+                        <li><strong>Discordコミュニティへの招待</strong></li>
+                        <li><strong>AIに関するテキスト相談（無制限）</strong></li>
+                        <li>月1回 グループオンライン活動会（自由参加）</li>
                     </ul>
                 </div>
                 <div class="plan-card">
                     <h3><span class="material-icons">support_agent</span>ガチ相談</h3>
                     <p class="price">月額 3,980円</p>
-                    <p class="plan-desc">「スポット相談したい人」におすすめ！</p>
+                    <p class="plan-desc">「AI活用を最速で成果に繋げたい」あなたに！</p>
                     <ul>
                         <li>みんなのスタジオの全内容</li>
                         <li><strong>個別Web相談 (1時間×2回/月)</strong></li>
-                        <li><strong>毎月1~2名限定</strong></li>
+                        <li><strong>あなたのAI活用戦略を徹底サポート</strong></li>
+                        <li>毎月1~2名限定</li>
                     </ul>
                 </div>
             </div>
@@ -104,8 +105,8 @@
 
     <footer class="final-cta fade-in-section">
         <div class="container">
-            <h2><span class="material-icons">sentiment_satisfied_alt</span>完璧じゃなくても、うまくできなくても、大丈夫。</h2>
-            <p>AIと一緒なら、何かを「つくる側」になれる。<br>あなたの「やってみたい」を、ここで始めませんか？</p>
+            <h2><span class="material-icons">sentiment_satisfied_alt</span>さあ、あなたの「創作」を始めよう。</h2>
+            <p>完璧じゃなくても、うまくできなくても、大丈夫。<br>AIと一緒なら、あなたの「やってみたい」が「できる」に変わります。<br>AIクリエイターズ・スタジオで、新しい創作の扉を開きませんか？</p>
             <a href="https://note.com/yakiimo_blog/membership" class="cta-button" target="_blank">AIクリエイターズ・スタジオを覗いてみる</a>
             <div class="social-links">
                 <p>ご不明点・ご相談はこちらから</p>
