Remove duplicate profile section from LP

--- a/index.html
+++ b/index.html
@@ -424,8 +424,22 @@
         </div>
     </section>
 
-    <!-- CTA Section -->
-    <section class="cta-section">
+    <section class="profile-section fade-in-section">
+        <div class="container">
+            <div class="profile-content">
+                <img src="yakiimo_prf.png" alt="やきいも プロフィール画像" class="profile-image">
+                <div class="profile-text">
+                    <h2>運営者：やきいも</h2>
+                    <p>ITエンジニア14年目</p>
+                    <p>GPTs250個以上の制作実績</p>
+                    <p>AIコンテンツ600部以上の販売実績</p>
+                    <p>GPTs部門賞・新人賞（教えて.AI by GMO）</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="features fade-in-section">
         <div class="container">
             <div class="cta-content">
                 <h2 class="cta-title">苦手なまま、始めてもいい場所</h2>
