Add Vibe Coding and GPTs Creator Magazine info to LP

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                     <span class="material-symbols-outlined">redeem</span>
                 </div>
                 <div class="bonus-content">
-                    <h3>GPTsクリエイターマガジン全記事読み放題！</h3>
+                    <h3><a href="https://note.com/yakiimo_blog/m/mee95f914c1b7" target="_blank">Vibe Coding（バイブコーディング）マガジン！</a>と<a href="https://note.com/yakiimo_blog/m/m863f4697737a" target="_blank">GPTsクリエイターマガジン</a>が全記事読み放題！</h3>
                     <p>有料商材よりも間違いなく有益な、実践的な内容をお届けします。</p>
                 </div>
             </div>
