Implement magazine cards with thumbnails, titles, and descriptions

--- a/index.html
+++ b/index.html
@@ -235,14 +235,21 @@
                     </ul>
                 </div>
             </div>
-            <div class="content-bonus">
-                <div class="bonus-icon">
-                    <span class="material-symbols-outlined">redeem</span>
-                </div>
-                <div class="bonus-content">
-                    <h3><a href="https://note.com/yakiimo_blog/m/mee95f914c1b7" target="_blank">Vibe Coding（バイブコーディング）マガジン！</a>と<a href="https://note.com/yakiimo_blog/m/m863f4697737a" target="_blank">GPTsクリエイターマガジン</a>が全記事読み放題！</h3>
-                    <p>有料商材よりも間違いなく有益な、実践的な内容をお届けします。</p>
-                </div>
+            <div class="magazine-grid">
+                <a href="https://note.com/yakiimo_blog/m/mee95f914c1b7" target="_blank" class="magazine-card">
+                    <div class="magazine-thumbnail">
+                        <span class="material-symbols-outlined">code</span>
+                    </div>
+                    <h3 class="magazine-title">Vibe Coding（バイブコーディング）マガジン！</h3>
+                    <p class="magazine-description">AIを活用した新しいプログラミング学習法。実践的なコードと解説で、あなたの開発スキルを加速させます。</p>
+                </a>
+                <a href="https://note.com/yakiimo_blog/m/m863f4697737a" target="_blank" class="magazine-card">
+                    <div class="magazine-thumbnail">
+                        <span class="material-symbols-outlined">smart_toy</span>
+                    </div>
+                    <h3 class="magazine-title">GPTsクリエイターマガジン</h3>
+                    <p class="magazine-description">GPTsの作成から収益化まで、実践的なノウハウを網羅。あなたのAI作品を世に送り出すためのガイドです。</p>
+                </a>
             </div>
         </div>
     </section>
