Integrate magazine thumbnail images into LP

--- a/index.html
+++ b/index.html
@@ -238,14 +238,14 @@
             <div class="magazine-grid">
                 <a href="https://note.com/yakiimo_blog/m/mee95f914c1b7" target="_blank" class="magazine-card">
                     <div class="magazine-thumbnail">
-                        <span class="material-symbols-outlined">code</span>
+                        <img src="vibe-coding_magagine.png" alt="Vibe Coding マガジン サムネイル">
                     </div>
                     <h3 class="magazine-title">Vibe Coding（バイブコーディング）マガジン！</h3>
                     <p class="magazine-description">AIを活用した新しいプログラミング学習法。実践的なコードと解説で、あなたの開発スキルを加速させます。</p>
                 </a>
                 <a href="https://note.com/yakiimo_blog/m/m863f4697737a" target="_blank" class="magazine-card">
                     <div class="magazine-thumbnail">
-                        <span class="material-symbols-outlined">smart_toy</span>
+                        <img src="gpts_magagin.png" alt="GPTsクリエイターマガジン サムネイル">
                     </div>
                     <h3 class="magazine-title">GPTsクリエイターマガジン</h3>
                     <p class="magazine-description">GPTsの作成から収益化まで、実践的なノウハウを網羅。あなたのAI作品を世に送り出すためのガイドです。</p>
